Add new images, fix index parameter names, add more data to algorithm

--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@
                 rz-slider-floor="0"
                 rz-slider-ceil="10"
                 rz-slider-always-show-bar="true"></rzslider>
-     
 
         <h3 class="fs-subtitle"> Business: </h3>
             <rzslider rz-slider-model="sliderValues.business"
@@ -69,14 +68,14 @@
                 rz-slider-ceil="10"
                 rz-slider-always-show-bar="true"></rzslider>
 
-        <h3 class="fs-subtitle"> Crime: </h3>
+        <h3 class="fs-subtitle"> Safety: </h3>
             <rzslider rz-slider-model="sliderValues.crime"
                 rz-slider-floor="0"
                 rz-slider-ceil="10"
                 rz-slider-always-show-bar="true"></rzslider>
 
-        <h3 class="fs-subtitle"> School: </h3>
-            <rzslider rz-slider-model="sliderValues.school"
+        <h3 class="fs-subtitle"> Outdoor Activities: </h3>
+            <rzslider rz-slider-model="sliderValues.outdoor"
                 rz-slider-floor="0"
                 rz-slider-ceil="10"
                 rz-slider-always-show-bar="true"></rzslider>
