--- a/index.html
+++ b/index.html
@@ -30,14 +30,34 @@
 	<!-- fieldsets -->
 <div class = "main" ng-controller="PCtrl">
 	<fieldset >
+
+
 		<h2 class="fs-title">Tell us more about you!</h2>
-				<input type="text" name="age" placeholder="How old are you?" ng-model="aboutYou.age"/>
-				<input type="text" name="city" placeholder="What city do you currently live in?" ng-model="aboutYou.city"/>
-				<input type="text" name="crime" placeholder="Have you ever been a victim of crime?" ng-model="aboutYou.crime"/>
-				<input type="text" name="employment" placeholder="Are you employed?" ng-model="aboutYou.employment"/>
-				<input type="text" name="education" placeholder="Would you like to pursue higher education?" ng-model="aboutYou.education"/>
-				<input type="text" name="transit" placeholder="Do you use your city's public transit?" ng-model="aboutYou.transit"/>
+
+		<label class="radio" type="text"> Have you ever been a victim of crime? </label><br>
+
+		<!-- Radio Buttons attempt -->
+		<span>
+        <label class="yesorno" for="crime_yes">Yes</label>
+        <input class="sound" type="radio" id="crime_yes" value="yes" name="user_age" ng-model="aboutYou.crime">
+        </span>
+
+        <span>
+		<label class="yesorno" for="crime_no">No</label>
+        <input class="sound" type="radio" id="crime_no" value="no" name="user_age" ng-model="aboutYou.crime">
+        </span>
+
+        <!-- Text Input in form -->
+
+		<input type="text" name="age" placeholder="How old are you?" ng-model="aboutYou.age"/>
+		<input type="text" name="city" placeholder="What city do you currently live in?" ng-model="aboutYou.city"/>
+		<!-- <input type="text" name="crime" placeholder="Have you ever been a victim of crime?" ng-model="aboutYou.crime"/> -->
+		<input type="text" name="employment" placeholder="Are you employed?" ng-model="aboutYou.employment"/>
+		<input type="text" name="education" placeholder="Would you like to pursue higher education?" ng-model="aboutYou.education"/>
+		<input type="text" name="transit" placeholder="Do you use your city's public transit?" ng-model="aboutYou.transit"/>
+
 		<input type="button" name="next" class="next action-button" value="Next" ng-click="clicky()"/>
+
 	</fieldset>
 
 	<fieldset>
