--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
                 rz-slider-ceil="10"
                 rz-slider-always-show-bar="true"></rzslider>
      
-		<h3 class="fs-subtitle"> Population: </h3>
+<!-- 		<h3 class="fs-subtitle"> Population: </h3>
             <rzslider rz-slider-model="sliderValues.population"
                 rz-slider-floor="0"
                 rz-slider-ceil="10"
-                rz-slider-always-show-bar="true"></rzslider>
+                rz-slider-always-show-bar="true"></rzslider> -->
 
         <h3 class="fs-subtitle"> Business: </h3>
             <rzslider rz-slider-model="sliderValues.business"
