--- a/index.html
+++ b/index.html
@@ -32,30 +32,93 @@
 	<fieldset >
 
 
-		<h2 class="fs-title">Tell us more about you!</h2>
+		<h2 class="fs-title">LET'S GET TO KNOW YOU!</h2>
 
-		<label class="radio" type="text"> Have you ever been a victim of crime? </label><br>
-
-		<!-- Radio Buttons attempt -->
-		<span>
-        <label class="yesorno" for="crime_yes">Yes</label>
-        <input class="sound" type="radio" id="crime_yes" value="yes" name="user_age" ng-model="aboutYou.crime">
-        </span>
-
-        <span>
-		<label class="yesorno" for="crime_no">No</label>
-        <input class="sound" type="radio" id="crime_no" value="no" name="user_age" ng-model="aboutYou.crime">
-        </span>
 
         <!-- Text Input in form -->
 
-		<input type="text" name="age" placeholder="How old are you?" ng-model="aboutYou.age"/>
-		<input type="text" name="city" placeholder="What city do you currently live in?" ng-model="aboutYou.city"/>
-		<!-- <input type="text" name="crime" placeholder="Have you ever been a victim of crime?" ng-model="aboutYou.crime"/> -->
-		<input type="text" name="employment" placeholder="Are you employed?" ng-model="aboutYou.employment"/>
-		<input type="text" name="education" placeholder="Would you like to pursue higher education?" ng-model="aboutYou.education"/>
-		<input type="text" name="transit" placeholder="Do you use your city's public transit?" ng-model="aboutYou.transit"/>
+		How old are you?
+		<br />
+		<input type="text" name="age" placeholder="21" ng-model="aboutYou.age"/>
+		What city do you currently live in? <br />
+		<input type="text" name="city" placeholder="New York" ng-model="aboutYou.city"/>
 
+				<input type="button" name="next" class="next action-button" value="Next" ng-click="clicky()"/>
+
+
+	</fieldset >
+	<fieldset>
+
+		<h2 class="fs-title">Tell us more about you!</h2>
+		<!-- <input type="text" name="crime" placeholder="Have you ever been a victim of crime?" ng-model="aboutYou.crime"/> -->
+		<!-- <input type="text" name="employment" placeholder="Are you employed?" ng-model="aboutYou.employment"/> -->
+
+		<!-- <input type="text" name="education" placeholder="Would you like to pursue higher education?" ng-model="aboutYou.education"/> -->
+		<!-- <input type="text" name="transit" placeholder="Do you use your city's public transit?" ng-model="aboutYou.transit"/> -->
+			<!-- EDUCATION -->
+
+
+
+
+	<!-- EDUCATION -->
+
+	<div class="radio-parent">
+		<div class="text-label">
+			Would you like to pursue higher education?
+		</div>
+		<!-- Radio Buttons attempt -->
+		<div class="radio-button-holder">
+  		<div class="radio-holder">
+  			<input class="sound" type="radio" id="edu_yes" value="yes" name="user_edu" ng-model="aboutYou.education"> Yes
+  		</div>
+	 		<div class="radio-holder">
+  			<input class="sound" type="radio" id="edu_no" value="no" name="user_edu" ng-model="aboutYou.education"> No
+  		</div>
+	  </div>
+	</div>
+
+
+
+
+		<!-- TRANSIT  -->
+
+
+	<div class="radio-parent">
+		<div class="text-label">
+			Do you use your city's public transit?
+		</div>
+		<!-- Radio Buttons attempt -->
+		<div class="radio-button-holder">
+  		<div class="radio-holder">
+  			<input class="sound" type="radio" id="transit_yes" value="yes" name="user_trans" ng-model="aboutYou.transit"> Yes
+  		</div>
+	 		<div class="radio-holder">
+  			<input class="sound" type="radio" id="transit_no" value="no" name="user_trans" ng-model="aboutYou.transit"> No
+  		</div>
+	  </div>
+	</div>
+
+
+		<!-- CRIME  -->
+
+
+	<div class="radio-parent">
+		<div class="text-label">
+			Have you ever been a victim of crime? 
+		</div>
+		<!-- Radio Buttons attempt -->
+		<div class="radio-button-holder">
+  		<div class="radio-holder">
+  			<input class="sound" type="radio" id="crime_yes" value="yes" name="user_crime" ng-model="aboutYou.crime"> Yes
+  		</div>
+	 		<div class="radio-holder">
+  			<input class="sound" type="radio" id="crime_no" value="no" name="user_crime" ng-model="aboutYou.crime"> No
+  		</div>
+	  </div>
+	</div>
+
+
+		<input type="button" name="previous" class="previous action-button" value="Previous" />
 		<input type="button" name="next" class="next action-button" value="Next" ng-click="clicky()"/>
 
 	</fieldset>
@@ -82,11 +145,11 @@
                 rz-slider-ceil="10"
                 rz-slider-always-show-bar="true"></rzslider> -->
 
-        <h3 class="fs-subtitle"> Business: </h3>
+<!--         <h3 class="fs-subtitle"> Business: </h3>
             <rzslider rz-slider-model="sliderValues.business"
                 rz-slider-floor="0"
                 rz-slider-ceil="10"
-                rz-slider-always-show-bar="true"></rzslider>
+                rz-slider-always-show-bar="true"></rzslider> -->
 
         <h3 class="fs-subtitle"> Safety: </h3>
             <rzslider rz-slider-model="sliderValues.crime"
@@ -117,10 +180,12 @@
 
 		<img ng-src="{{result.IMAGE}}" alt="display perfect city image" style="width:500px;height:300px;" />
 
-
-		<br>
-		<input type="button" name="previous" class="previous action-button" value="Previous" />
-		<input type="submit" name="submit" class="submit action-button" value="Submit" />
+		<br />
+		<br />
+		<!-- <input type="button" name="previous" class="previous action-button" value="Previous" /> -->
+		<a href="index.html" class="action-button" >Restart</a>
+		<a href="#" class="action-button" >Share</a>
+		<!-- <input type="submit" name="submit" class="submit action-button" value="Submit" /> -->
 
 	</fieldset>
 
