--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
 	<title>perfectcity.io</title>
     <link rel="stylesheet" href="style/main.css" />
     <link rel="stylesheet" href="style/rzslider.css" />
-
 	<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
 	<script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
 	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css"> -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.13.0/ui-bootstrap-tpls.js"></script>
@@ -18,7 +16,7 @@
 	<script src="js/rzslider.js"></script>
 </head>
 <body ng-app = "myApp">
-<h1 class = "pcity">Ever wondered if there was a perfect city for you?</h1>
+<h1 class = "pcity">Take this quiz to find out the perfect city for you!</h1>
 <!-- multistep form -->
 <form id="msform">
 	<!-- progressbar -->
@@ -27,7 +25,12 @@
 		<li>Dream</li>
 		<li>Perfect</li>
 	</ul>
-	<!-- fieldsets -->
+
+
+<!-- fieldsets -->
+
+<!--_____________________PAGE 1_____________________-->
+
 <div class = "main" ng-controller="PCtrl">
 	<fieldset >
 
@@ -50,17 +53,9 @@
 	<fieldset>
 
 		<h2 class="fs-title">Tell us more about you!</h2>
-		<!-- <input type="text" name="crime" placeholder="Have you ever been a victim of crime?" ng-model="aboutYou.crime"/> -->
-		<!-- <input type="text" name="employment" placeholder="Are you employed?" ng-model="aboutYou.employment"/> -->
 
-		<!-- <input type="text" name="education" placeholder="Would you like to pursue higher education?" ng-model="aboutYou.education"/> -->
-		<!-- <input type="text" name="transit" placeholder="Do you use your city's public transit?" ng-model="aboutYou.transit"/> -->
-			<!-- EDUCATION -->
-
-
-
-
-	<!-- EDUCATION -->
+		
+		<!-- EDUCATION -->
 
 	<div class="radio-parent">
 		<div class="text-label">
@@ -76,8 +71,6 @@
   		</div>
 	  </div>
 	</div>
-
-
 
 
 		<!-- TRANSIT  -->
@@ -118,12 +111,17 @@
 	</div>
 
 
+		<!-- BUTTONS -->
+
 		<input type="button" name="previous" class="previous action-button" value="Previous" />
 		<input type="button" name="next" class="next action-button" value="Next" ng-click="clicky()"/>
 
 	</fieldset>
 
+	<!--_____________________PAGE 2_____________________-->
+
 	<fieldset>
+
 		<h2 class="fs-title">How important are these parameters to you?</h2>
 			    
 
@@ -138,18 +136,6 @@
                 rz-slider-floor="0"
                 rz-slider-ceil="10"
                 rz-slider-always-show-bar="true"></rzslider>
-     
-<!-- 		<h3 class="fs-subtitle"> Population: </h3>
-            <rzslider rz-slider-model="sliderValues.population"
-                rz-slider-floor="0"
-                rz-slider-ceil="10"
-                rz-slider-always-show-bar="true"></rzslider> -->
-
-<!--         <h3 class="fs-subtitle"> Business: </h3>
-            <rzslider rz-slider-model="sliderValues.business"
-                rz-slider-floor="0"
-                rz-slider-ceil="10"
-                rz-slider-always-show-bar="true"></rzslider> -->
 
         <h3 class="fs-subtitle"> Safety: </h3>
             <rzslider rz-slider-model="sliderValues.crime"
@@ -163,7 +149,7 @@
                 rz-slider-ceil="10"
                 rz-slider-always-show-bar="true"></rzslider>
 
-        <h3 > Unemployment: </h3>
+        <h3 > Employment Opportunities: </h3>
             <rzslider rz-slider-model="sliderValues.unemployment"
                 rz-slider-floor="0"
                 rz-slider-ceil="10"
@@ -173,6 +159,7 @@
 		<input type="button" name="next" class="next action-button" value="Next" ng-click="getResult()"/>
 	</fieldset>
 
+<!--_____________________PAGE 3_____________________-->
 
 	<fieldset>
 		<h2 class="fs-title">And the perfect city for you is ...</h2>
@@ -182,10 +169,9 @@
 
 		<br />
 		<br />
-		<!-- <input type="button" name="previous" class="previous action-button" value="Previous" /> -->
+		
 		<a href="index.html" class="action-button" >Restart</a>
 		<a href="#" class="action-button" >Share</a>
-		<!-- <input type="submit" name="submit" class="submit action-button" value="Submit" /> -->
 
 	</fieldset>
 
