--- a/index.html
+++ b/index.html
@@ -191,6 +191,10 @@
 
 </div>
 </form>
+<footer>
+	
+	&copy; <a href="http://github.com/aiyotech">aiyotech</a> 2015 | <a href="about.html">Learn more about PerfectCity.io</a>
+</footer>
 </body>
 </html>
 
