--- a/about.html
+++ b/about.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>perfectcity.io</title>
     <link rel="stylesheet" href="style/main.css" />
+    <title>perfectcity.io</title>
+    <style >
+    html{
+    	background-image: url('./images/bg_about.jpg');
+    	/*background-size: 1500px 1500px;
+		background-position: 50% 50%*/
+    }
+    </style>
     <link rel="stylesheet" href="style/rzslider.css" />
 	<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
 	<script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
@@ -15,7 +22,8 @@
 	<script src="js/rzslider.js"></script>
 </head>
 <body ng-app = "myApp">
-<h1 class = "pcity">perfectcity.aiyo</h1>
+<h1 class = "pcityabout">perfectcity.aiyo</h1>
+<h2 class = "pcity">The data science behind perfectcity.aiyo</h1>
 <!-- multistep form -->
 <form id="msform">
 	<!-- progressbar -->
@@ -60,21 +68,21 @@
 		</p>
 
 
-		<h3>
-		Made in Montreal!
-		</h3>
-		<p>
-		This is a project!
-		</p>
-
-		<input type="button" name="next" class="next action-button" value="Take the Quiz" ng-click="clicky()"/>
-
+		
+		<br>
+		<br>
+		<a href="index.html" type="button" class="action-button" >Take the Quiz</a>
 
 	</fieldset >
 	
 
 </div>
 </form>
+<footer>
+	
+	<a>Made with &#10084 by <a href="http://www.zafarali.me/">Zafarali Ahmed</a> & <a href="http://imranjameel.com/">Imran Jameel</a> |  <a href="http://github.com/aiyotech">aiyotech &copy;</a> 2015
+</footer>
+</footer>
 </body>
 </html>
 
