--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 	<script src="js/rzslider.js"></script>
 </head>
 <body ng-app = "myApp">
-<h1 class = "pcity">Take this quiz to find out the perfect city for you!</h1>
+<h1 class = "pcityabout">perfectcity.aiyo</h1>
+<h2 class = "pcity">Take this quiz to find out the perfect city for you!</h1>
 <!-- multistep form -->
 <form id="msform">
 	<!-- progressbar -->
@@ -179,7 +180,7 @@
 </form>
 <footer>
 	
-	&copy; <a href="http://github.com/aiyotech">aiyotech</a> 2015 | <a href="about.html">Learn more about PerfectCity.io</a>
+	 <a href="about.html">Learn more about perfectcity.aiyo</a> |  <a href="http://github.com/aiyotech">aiyotech &copy;</a> 2015
 </footer>
 </body>
 </html>
