--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
 </head>
 <body ng-app = "myApp">
 <h1 class = "pcityabout">perfectcity.aiyo</h1>
-<h2 class = "pcity">The data science behind perfectcity.aiyo</h1>
+<h2 class = "pcity" style="color:black">Data Science</h1>
 <!-- multistep form -->
 <form id="msform">
 	<!-- progressbar -->
