whats written so far

--- a/about.html
+++ b/about.html
@@ -27,12 +27,6 @@
 <!-- multistep form -->
 <form id="msform">
 	<!-- progressbar -->
-	<ul id="progressbar">
-		<li class="active">Current</li>
-		<li>Dream</li>
-		<li>Perfect</li>
-	</ul>
-
 
 <!-- fieldsets -->
 
@@ -42,34 +36,24 @@
 	<fieldset >
 
 
-		<h2 class="fs-title">About us!</h2>
+		<h2 class="fs-title">The story behind your result</h2>
 
-		<h3>
-		Made in Montreal!
-		</h3>
-		<p>
-		This is a project!
+		<p class="about-p">PerfectCity.io is a way for you to discover you ideal city.
+		This project was built for the <a href="http://sjopendata.challengepost.com/">ChallengePost Open Data Summer Jam</a>. The result of the PerfectCity.io quiz is based on real data carefully <a href="https://github.com/zafarali/perfectcity.io/blob/master/data_curation.ipynb">curated</a> from <a href="http://www.statcan.gc.ca/">Statistics Canada</a> and a few other sources. We worked hard to ensure that the data is the most recent we could find to help give you the best results.</p>
+
+		<p class="about-p">
+		We have carefully crafted questions to help our algorithm decide the best city for you to live in. Here's our methodology behind the questions and how our algorithm works.
 		</p>
 
 
-		<h3>
-		Made in Montreal!
-		</h3>
-		<p>
-		This is a project!
+		<p class="about-p">
+		We have carefully crafted questions to help our algorithm decide the best city for you to live in. Here's our methodology behind the questions and how our algorithm works.
 		</p>
 
-
-		<h3>
-		Made in Montreal!
-		</h3>
-		<p>
-		This is a project!
+		<p class="about-p">
+			
 		</p>
-
-
 		
-		<br>
 		<br>
 		<a href="index.html" type="button" class="action-button" >Take the Quiz</a>
 
@@ -80,7 +64,7 @@
 </form>
 <footer>
 	
-	<a>Made with &#10084 by <a href="http://www.zafarali.me/">Zafarali Ahmed</a> & <a href="http://imranjameel.com/">Imran Jameel</a> |  <a href="http://github.com/aiyotech">aiyotech &copy;</a> 2015
+	<a>Made with &#10084; by <a href="http://www.zafarali.me/">Zafarali Ahmed</a> & <a href="http://imranjameel.com/">Imran Jameel</a> |  <a href="http://github.com/aiyotech">aiyotech &copy;</a> 2015
 </footer>
 </footer>
 </body>
