--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
 <!--_____________________PAGE 1_____________________-->
 
 <div class = "main" ng-controller="PCtrl">
-	<fieldset >
+	<fieldset style="margin-bottom:35px">
 
 
 		<h2 class="fs-title">The story behind your result</h2>
@@ -51,7 +51,7 @@
 		</p>
 
 		<p class="about-p">
-			We ask you for the age is used to match you to a city with simillar proportions of its population as your age group. Our data has a resolution of 5 years to ensure we get the best results. 
+			Your age is used to match you to a city with simillar proportions of its population as your age group. Our data has a resolution of 5 years to ensure we get the best results. 
 		</p>
 
 
@@ -69,20 +69,23 @@
 			\[\text{similarity}(x^*,x)=\frac{1}{1+\sqrt{\sum_iw_i(x_i^*-x_i)^2}}\]
 
 			<br />
-			Where $($x_i^*$)$ is your preference for the $($i$)$th parameter and $($x_i$)$ is that for the city we are comparing it to. $($w_i$)$ represents the personalized weight that we determined for you.
+			- $($x_i^*$)$ is your preference for the $($i$)$th parameter. <br />
+			- $($x_i$)$ is $($i$)$th parameter for the city we are comparing it to <br />
+			- $($w_i$)$ represents the personalized weight that we determined for you.
 		</p>
 
 
 		<br>
 		<a href="index.html" type="button" class="action-button" >Take the Quiz</a>
-
+		<br />
 	</fieldset >
 	
 
 
 </div>
 </form>
-<footer>
+
+<footer style="position:fixed; background-color:black; margin-bottom:-1px">
 	
 	<a>Made with &#10084; by <a href="http://www.zafarali.me/">Zafarali Ahmed</a> & <a href="http://imranjameel.com/">Imran Jameel</a> |  <a href="http://github.com/aiyotech">aiyotech &copy;</a> 2015
 </footer>
