finish my side of the code

--- a/about.html
+++ b/about.html
@@ -22,8 +22,8 @@
 	<script src="js/rzslider.js"></script>
 </head>
 <body ng-app = "myApp">
-<h1 class = "pcityabout">perfectcity.aiyo</h1>
-<h2 class = "pcity" style="color:black">Data Science</h1>
+<h1 class = "pcityabout" style="margin-bottom:-25px">perfectcity.aiyo</h1>
+<!-- <h2 class = "pcity" style="color:black">Data Science</h1> -->
 <!-- multistep form -->
 <form id="msform">
 	<!-- progressbar -->
@@ -36,7 +36,7 @@
 	<fieldset style="margin-bottom:35px">
 
 
-		<h2 class="fs-title">The story behind your result</h2>
+		<h2 class="fs-title">The data science behind your result</h2>
 
 		<p class="about-p">PerfectCity.io is a way for you to discover you ideal city.
 		This project was built for the <a href="http://sjopendata.challengepost.com/">ChallengePost Open Data Summer Jam</a>. The result of the PerfectCity.io quiz is based on real data carefully <a href="https://github.com/zafarali/perfectcity.io/blob/master/data_curation.ipynb">curated</a> from <a href="http://www.statcan.gc.ca/">Statistics Canada</a> and a few other sources. We worked hard to ensure that the data is the most recent we could find to help give you the best results.</p>
@@ -74,9 +74,19 @@
 			- $($w_i$)$ represents the personalized weight that we determined for you.
 		</p>
 
+		<p class="about-p">
+		Once our algorithm completes calculating these similarities, it then maximizes the list to return the city with the highest similarity to you.
+		</p>
+
+		<p class="about-p">
+		And thats it! <br />
+		<br />
+		We hope you enjoy this app as much as we enjoyed making it.
+		</p>
+
 
 		<br>
-		<a href="index.html" type="button" class="action-button" >Take the Quiz</a>
+		<a href="index.html" type="button" class="action-button" style="position: fixed; bottom:20px">Take the Quiz</a>
 		<br />
 	</fieldset >
 	
