--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
 		<h2 class="fs-title">The data science behind your result</h2>
 
 		<p class="about-p">PerfectCity.io is a way for you to discover you ideal city.
-		This project was built for the <a href="http://sjopendata.challengepost.com/">ChallengePost Open Data Summer Jam</a>. The result of the PerfectCity.io quiz is based on real data carefully <a href="https://github.com/zafarali/perfectcity.io/blob/master/data_curation.ipynb">curated</a> from <a href="http://www.statcan.gc.ca/">Statistics Canada</a> and a few other sources. We worked hard to ensure that the data is the most recent we could find to help give you the best results.</p>
+		This project was built for the <a href="http://sjopendata.challengepost.com/">ChallengePost Open Data Summer Jam</a>. The result of the PerfectCity.io quiz is based on real data carefully <a href="https://github.com/aiyotech/perfectcity.io/blob/master/data_curation.ipynb">curated</a> from <a href="http://www.statcan.gc.ca/">Statistics Canada</a> and a few other sources. We worked hard to ensure that the data is the most recent we could find to help give you the best results.</p>
 
 		<p class="about-p">
 			We have carefully crafted questions to help our algorithm decide the best city for you to live in. Here's our methodology behind the questions and how our algorithm works.
@@ -75,15 +75,16 @@
 		</p>
 
 		<p class="about-p">
-		Once our algorithm completes calculating these similarities, it then maximizes the list to return the city with the highest similarity to you.
+		Once our algorithm completes calculating these similarities, it then maximizes the list to return the city with the highest similarity to you. And thats it!
 		</p>
 
 		<p class="about-p">
-		And thats it! <br />
-		<br />
-		We hope you enjoy this app as much as we enjoyed making it.
+			In the future we would like to incorporate weather, cultural and business data and ofcourse more information from other cities around the world! There are also opportunities to use Twitter sentiment analysis to use what people are feeling about their city in real time and incroporate that into the algorithm.
 		</p>
 
+		<p class="about-p">
+			The curated data set is available on the github. Enjoy!
+		</p>
 
 		<br>
 		<a href="index.html" type="button" class="action-button" style="position: fixed; bottom:20px">Take the Quiz</a>
