--- a/about.html
+++ b/about.html
@@ -87,7 +87,7 @@
 		</p>
 
 		<br>
-		<a href="index.html" type="button" class="action-button" style="position: fixed; bottom:20px">Take the Quiz</a>
+		<a href="index.html" type="button" class="action-button" style="position: fixed; bottom:20px; right:0">Take the Quiz</a>
 		<br />
 	</fieldset >
 	
