--- a/about.html
+++ b/about.html
@@ -38,8 +38,12 @@
 
 		<h2 class="fs-title">The data science behind your result</h2>
 
-		<p class="about-p">PerfectCity.io is a way for you to discover you ideal city.
-		This project was built for the <a href="http://sjopendata.challengepost.com/">ChallengePost Open Data Summer Jam</a>. The result of the PerfectCity.io quiz is based on real data carefully <a href="https://github.com/aiyotech/perfectcity.io/blob/master/data_curation.ipynb">curated</a> from <a href="http://www.statcan.gc.ca/">Statistics Canada</a> and a few other sources. We worked hard to ensure that the data is the most recent we could find to help give you the best results.</p>
+		<p class="about-p"> perfectcity.aiyo is a way for you to discover your ideal city.</p>
+
+		<p class="about-p">This project was built for the <a href="http://sjopendata.challengepost.com/">ChallengePost Open Data Summer Jam</a>.
+		</p>
+
+		<p class="about-p"> The result of the perfectcity.aiyo quiz is based on real data carefully <a href="https://github.com/aiyotech/perfectcity.io/blob/master/data_curation.ipynb">curated</a> from <a href="http://www.statcan.gc.ca/">Statistics Canada</a> and a few other sources. We worked hard to ensure that the data is the most recent we could find in order to give you the best results.</p>
 
 		<p class="about-p">
 			We have carefully crafted questions to help our algorithm decide the best city for you to live in. Here's our methodology behind the questions and how our algorithm works.
@@ -47,7 +51,7 @@
 
 
 		<p class="about-p">
-			We first ask you for your current city to ensure we don't match you to the same! (If you want to see if your current city is right for you, just leave it out and our algorithm will take care of the rest.)
+			We first ask you for your current city to ensure we don't match you to your current city! (If you want to know if your current city is the right place for you, just leave it out and our algorithm will take care of the rest.)
 		</p>
 
 		<p class="about-p">
@@ -79,7 +83,7 @@
 		</p>
 
 		<p class="about-p">
-			In the future we would like to incorporate weather, cultural and business data and ofcourse more information from other cities around the world! There are also opportunities to use Twitter sentiment analysis to use what people are feeling about their city in real time and incroporate that into the algorithm.
+			In the future we would like to incorporate weather, cultural and business data and ofcourse more information from other cities around the world! There are also opportunities to use a Twitter sentiment analysis to analyze what people are feeling about their city in real time and incroporate that into the algorithm.
 		</p>
 
 		<p class="about-p">
