--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
 		<br />
 		
 		<a href="index.html" class="action-button" >Restart</a>
+		<a href="https://twitter.com/intent/tweet?url=http://aiyotech.github.io/perfectcity.aiyo/&text=My perfect city is {{result.CITYNAME}}! Find your #perfectcity:" class="action-button" >Tweet This</a>
 		<a href="#" class="action-button" >Share</a>
 
 	</fieldset>
