change to allow new page open

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 		
 		<a href="index.html" class="action-button" >Restart</a>
 		<a href="https://en.wikipedia.org/?title={{result.CITYNAME | titlecase }}" class="action-button" >Learn more about {{result.CITYNAME}}</a>
-		<a href="https://twitter.com/intent/tweet?url=http://aiyotech.github.io/perfectcity.aiyo/&hashtags=perfectcity&text=My perfect city is {{result.CITYNAME}}!" class="action-button" >Tweet This</a>
+		<a href="https://twitter.com/intent/tweet?url=http://aiyotech.github.io/perfectcity.aiyo/&hashtags=perfectcity&text=My perfect city is {{result.CITYNAME}}!" target="blank" class="action-button" >Tweet This</a>
 
 	</fieldset>
 
