change to allow new page open

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>perfectcity.io</title>
+	<title>PerfectCity.aiyo - Discover the best city for you</title>
     <link rel="stylesheet" href="style/main.css" />
     <link rel="stylesheet" href="style/rzslider.css" />
 	<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
