--- a/about.html
+++ b/about.html
@@ -83,7 +83,7 @@
 		</p>
 
 		<p class="about-p">
-			In the future we would like to incorporate weather, cultural and business data and ofcourse more information from other cities around the world! There are also opportunities to use a Twitter sentiment analysis to analyze what people are feeling about their city in real time and incroporate that into the algorithm.
+			In the future we would like to incorporate weather, cultural and business data and ofcourse more information from other cities around the world! There are also opportunities to use a Twitter sentiment analysis to analyze what people are feeling about their city in real time and incorporate that into the algorithm.
 		</p>
 
 		<p class="about-p">
